Updated dutch language files

--- a/packages/core/client/src/locale/nl-NL.json
+++ b/packages/core/client/src/locale/nl-NL.json
@@ -1,5 +1,7 @@
 {
     "Display <1><0>10</0><1>20</1><2>50</2><3>100</3></1> items per page": "Toon <1><0>10</0><1>20</1><2>50</2><3>100</3></1> items per pagina",
+    "Page number": "Paginanummer",
+    "Page size": "Paginagrootte",   
     "Meet <1><0>All</0><1>Any</1></1> conditions in the group": "Voldoe aan <1><0>Alle</0><1>Een</1></1> voorwaarde(n) in de groep",
     "Open in<1><0>Modal</0><1>Drawer</1><2>Window</2></1>": "Open in<1><0>Modal</0><1>Drawer</1><2>Venster</2></1>",
     "{{count}} filter items": "{{count}} filter items",
@@ -38,15 +40,20 @@
     "Unconnected": "Niet verbonden",
     "System settings": "Systeeminstellingen",
     "System title": "Systeemtitel",
+    "Setting" : "Instelling",
     "Settings": "Instellingen",
+    "Enable": "Inschakelen",
+    "Disable": "Uitschakelen",
+    "On": "Aan",
+    "Off": "Uit",
     "Logo": "Logo",
     "Add menu item": "Menu-item toevoegen",
     "Page": "Pagina",
+    "Tab": "Tab",
     "Name": "Naam",
     "Icon": "Icoon",
     "Group": "Groep",
     "Link": "Link",
-    "Tab": "Tab",
     "Save conditions": "Voorwaarden opslaan",
     "Edit menu item": "Menu-item bewerken",
     "Move to": "Verplaats naar",
@@ -82,9 +89,6 @@
     "Disabled": "Uitgeschakeld",
     "Enabled": "Ingeschakeld",
     "Problematic": "Problematisch",
-    "Setting": "Instelling",
-    "On": "Aan",
-    "Off": "Uit",
     "Empty": "Leeg",
     "Linkage rule": "Koppelingregel",
     "Linkage rules": "Koppelingregels",
@@ -434,7 +438,7 @@
     "Allow linking to multiple records": "Koppelen aan meerdere records toestaan",
     "Allow uploading multiple files": "Meerdere bestanden uploaden toestaan",
     "Configure calendar": "Kalender configureren",
-    "Title field": "Titelfeld",
+    "Title field": "Titelveld",
     "Custom title": "Aangepaste titel",
     "Daily": "Dagelijks",
     "Weekly": "Wekelijks",
@@ -884,5 +888,171 @@
     "If selected, the page will display Tab pages.": "Indien geselecteerd, worden tabbladen op de pagina weergegeven.",
     "If selected, the route will be displayed in the menu.": "Indien geselecteerd, wordt de route weergegeven in het menu.",
     "Are you sure you want to hide this tab?": "Weet je zeker dat je dit tabblad wil verbergen?",
-    "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "Na verbergen wordt dit tabblad niet meer weergegeven in de tabbalk. Om het opnieuw te tonen, moet je naar de routebeheerpagina gaan om het in te stellen."
- }
+    "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "Na verbergen wordt dit tabblad niet meer weergegeven in de tabbalk. Om het opnieuw te tonen, moet je naar de routebeheerpagina gaan om het in te stellen.",
+    "Calculation engine": "Berekeningsengine",
+    "Expression collection": "Expressiecollectie",
+    "Tree collection": "Boomcollectie",
+    "Parent ID": "Ouder-ID",
+    "Parent": "Ouder",
+    "Children": "Kinderen",
+    "Confirm": "Bevestigen",
+    "Block": "Blok",
+    "Unnamed": "Naamloos",
+    "SQL collection": "SQL-collectie",
+    "Configure field": "Veld configureren",
+    "Username": "Gebruikersnaam",
+    "Null": "Leeg",
+    "Boolean": "Boolean",
+    "String": "Tekst",
+    "Syntax references": "Syntax-referenties",
+    "Math.js comes with a large set of built-in functions and constants, and offers an integrated solution to work with different data types.": "Math.js wordt geleverd met een groot aantal ingebouwde functies en constanten en biedt een geïntegreerde oplossing om met verschillende gegevenstypen te werken.",
+    "Formula.js supports most Microsoft Excel formula functions.": "Formula.js ondersteunt de meeste Microsoft Excel-formulefuncties.",
+    "String template": "Tekstsjabloon",
+    "Simple string replacement, can be used to interpolate variables in a string.": "Eenvoudige tekstvervanging, kan worden gebruikt om variabelen in een tekst te interpoleren.",
+    "https://docs.nocobase.com/handbook/calculation-engines/formula": "https://docs.nocobase.com/handbook/calculation-engines/formula",
+    "https://docs.nocobase.com/handbook/calculation-engines/mathjs": "https://docs.nocobase.com/handbook/calculation-engines/mathjs",
+    "Display <icon></icon> when unchecked": "Toon <icon></icon> wanneer niet aangevinkt",
+    "Allow dissociate": "Loskoppelen toestaan",
+    "Edit block title & description": "Blok titel & beschrijving bewerken",
+    "Add Markdown": "Markdown toevoegen",
+    "Must be 1-50 characters in length (excluding @.<>\"'/)": "Moet 1-50 tekens lang zijn (exclusief @.<>\"'/)",
+    "Original title: ": "Originele titel: ",
+    "Original field title: ": "Originele veldtitel: ",
+    "Data source permissions": "Datatoegangsrechten",
+    "Now": "Nu",
+    "Access control": "Toegangscontrole",
+    "Remove": "Verwijderen",
+    "Docs": "Documentatie",
+    "Enable page header": "Paginahoofd inschakelen",
+    "Display page title": "Paginatitel weergeven",
+    "Edit page title": "Paginatitel bewerken",
+    "Enable page tabs": "Pagina-tabbladen inschakelen",
+    "Constant": "Constant",
+    "Select a variable": "Selecteer een variabele",
+    "Double click to choose entire object": "Dubbelklik om het hele object te kiezen",
+    "TRUE": "WAAR",
+    "FALSE": "ONWAAR",
+    "Prettify": "Opknappen",
+    "Theme": "Thema",
+    "Default theme": "Standaardthema",
+    "Compact theme": "Compact thema",
+    "Download": "Downloaden",
+    "File type is not supported for previewing, please download it to preview.": "Bestandstype wordt niet ondersteund voor voorbeeldweergave, download het om te bekijken.",
+    "Click or drag file to this area to upload": "Klik of sleep een bestand naar dit gebied om te uploaden.",
+    "Support for a single or bulk upload.": "Ondersteuning voor enkele of bulk-upload.",
+    "File size should not exceed {{size}}.": "Bestandsgrootte mag {{size}} niet overschrijden.",
+    "File size exceeds the limit": "Bestandsgrootte overschrijdt de limiet.",
+    "File type is not allowed": "Bestandstype is niet toegestaan.",
+    "Incomplete uploading files need to be resolved": "Onvolledig geüploade bestanden moeten worden opgelost.",
+    "Default title for each record": "Standaardtitel voor elk record.",
+    "If collection inherits, choose inherited collections as templates": "Als de collectie overerft, kies geërfde collecties als sjablonen.",
+    "Select an existing piece of data as the initialization data for the form": "Selecteer een bestaand gegeven als initiële data voor het formulier.",
+    "Only the selected fields will be used as the initialization data for the form": "Alleen de geselecteerde velden worden gebruikt als initiële data voor het formulier.",
+    "Template Data": "Sjabloongegevens",
+    "Data fields": "Gegevensvelden",
+    "Add template": "Sjabloon toevoegen",
+    "Enable form data template": "Formuliersjabloon inschakelen",
+    "Form data templates": "Formuliersjablonen",
+    "No configuration available.": "Geen configuratie beschikbaar.",
+    "Reload application": "Herlaad applicatie",
+    "The application is reloading, please do not close the page.": "De applicatie wordt opnieuw geladen, sluit de pagina niet.",
+    "Application reloading": "Applicatie wordt opnieuw geladen",
+    "Allows to clear cache, reboot application": "Sta toe om cache te wissen en applicatie te herstarten.",
+    "The will interrupt service, it may take a few seconds to restart. Are you sure to continue?": "Dit onderbreekt de service en kan enkele seconden duren. Weet je zeker dat je wilt doorgaan?",
+    "Clear cache": "Cache wissen",
+    "Are you sure you want to clear cache ?": "Weet je zeker dat je de cache wilt wissen?",
+    "Quick create": "Snel aanmaken",
+    "Dropdown": "Keuzelijst",
+    "Pop-up": "Pop-up",
+    "Direct duplicate": "Direct dupliceren",
+    "Copy into the form and continue to fill in": "Kopieer in het formulier en vul verder in.",
+    "Failed to load plugin": "Kan plug-in niet laden.",
+    "Date range limit": "Datumbereiklimiet",
+    "MinDate": "Minimale datum",
+    "MaxDate": "Maximale datum",
+    "Please select time or variable": "Selecteer een tijd of variabele.",
+    "Filter out a single piece or a group of records as a template": "Filter een enkel item of een groep records als sjabloon.",
+    "The title field is used to identify the template record": "Het titelveld wordt gebruikt om het sjabloonrecord te identificeren.",
+    "Template fields": "Sjabloonvelden",
+    "The selected fields will automatically populate the form": "De geselecteerde velden vullen automatisch het formulier in.",
+    "UnSelect all": "Alles deselecteren",
+    "Secondary confirmation": "Secundaire bevestiging",
+    "Perform the {{title}}": "Voer {{title}} uit.",
+    "Are you sure you want to perform the {{title}} action?": "Weet je zeker dat je de actie {{title}} wilt uitvoeren?",
+    "Permission denied": "Toestemming geweigerd.",
+    "Allow add new": "Sta toe om nieuw toe te voegen.",
+    "Data model": "Gegevensmodel",
+    "Security": "Beveiliging",
+    "Action": "Actie",
+    "System": "Systeem",
+    "Other": "Overige",
+    "Allow selection of existing records": "Sta selectie van bestaande records toe.",
+    "Data Model": "Gegevensmodel",
+    "Blocks": "Blokken",
+    "Users & permissions": "Gebruikers en machtigingen",
+    "System management": "Systeembeheer",
+    "System & security": "Systeem en beveiliging",
+    "Workflow": "Werkstroom",
+    "Third party services": "Diensten van derden",
+    "Data model tools": "Gegevensmodeltools",
+    "Data sources": "Gegevensbronnen",
+    "Collections": "Collecties",
+    "Collection fields": "Collectievelden",
+    "Authentication": "Authenticatie",
+    "Logging and monitoring": "Logging en monitoring",
+    "Main": "Hoofd",
+    "Index": "Index",
+    "Field values must be unique.": "Veldwaarden moeten uniek zijn.",
+    "Alphabet": "Alfabet",
+    "Accuracy": "Nauwkeurigheid",
+    "Millisecond": "Milliseconde",
+    "Second": "Seconde",
+    "Unix Timestamp": "Unix-tijdstempel",
+    "Field value do not meet the requirements": "Veldwaarde voldoet niet aan de vereisten.",
+    "Field value size is": "Veldwaardegrootte is",
+    "Unit conversion": "Eenheidsconversie",
+    "Separator": "Scheidingsteken",
+    "Prefix": "Voorvoegsel",
+    "Suffix": "Achtervoegsel",
+    "Record unique key": "Unieke recordsleutel",
+    "Filter target key": "Filterdoelsleutel",
+    "If a collection lacks a primary key, you must configure a unique record key to locate row records within a block, failure to configure this will prevent the creation of data blocks for the collection.": "Als een collectie geen primaire sleutel heeft, moet je een unieke recordsleutel configureren om rijen binnen een blok te lokaliseren. Anders kunnen er geen gegevensblokken worden aangemaakt.",
+    "Filter data based on the specific field, with the requirement that the field value must be unique.": "Filter gegevens op basis van een specifiek veld, waarbij de veldwaarde uniek moet zijn.",
+    "Multiply by": "Vermenigvuldigen met",
+    "Divide by": "Delen door",
+    "Scientifix notation": "Wetenschappelijke notatie",
+    "Normal": "Normaal",
+    "Automatically generate default values": "Automatisch standaardwaarden genereren.",
+    "Refresh data on close": "Ververs gegevens bij sluiten.",
+    "Refresh data on action": "Ververs gegevens bij actie.",
+    "Unknown field type": "Onbekend veldtype.",
+    "The following field types are not compatible and do not support output and display": "De volgende veldtypen zijn niet compatibel en ondersteunen geen uitvoer en weergave.",
+    "Not fixed": "Niet vastgezet",
+    "Left fixed": "Links vastgezet",
+    "Right fixed": "Rechts vastgezet",
+    "Fixed": "Vastgezet",
+    "Set block height": "Blokhoogte instellen",
+    "Specify height": "Hoogte specificeren",
+    "Full height": "Volledige hoogte",
+    "Please configure the URL": "Configureer de URL.",
+    "URL": "URL",
+    "Search parameters": "Zoekparameters",
+    "Do not concatenate search params in the URL": "Voeg zoekparameters niet samen in de URL.",
+    "Edit link": "Link bewerken",
+    "Add parameter": "Parameter toevoegen",
+    "Use simple pagination mode": "Gebruik eenvoudige paginering",
+    "Set Template Engine": "Sjabloonengine instellen",
+    "Template engine": "Sjabloonengine",
+    "Table size": "Tabelgrootte",
+    "No data": "Geen data",
+    "Show file name": "Toon bestandsnaam",
+    "Filled": "Gevuld",
+    "Enable index column": "Indexkolom inschakelen",
+    "Icon only": "Enkel icoon",
+    "Valid range: 100-900": "Geldige waarde: 100-900",
+    "Valid range: 10-40": "Geldige waarde: 10-40",
+    "Font Size（px）": "Lettergrootte（px）",
+    "Font Weight": "Letterdikte",
+    "Font Style": "Letterstijl",
+    "Italic": "Cursief"
+}
