--- a/packages/plugins/@nocobase/plugin-action-bulk-edit/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-action-bulk-edit/src/locale/nl-NL.json
@@ -1,4 +1,5 @@
 {
     "Bulk edit": "Bewerken in bulk",
-    "Data will be updated": "Gegevens worden bijgewerkt"
+    "Data will be updated": "Gegevens worden bijgewerkt",
+    "Entire collection": "Gehele collectie"
 }
