--- a/packages/plugins/@nocobase/plugin-action-import/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-action-import/src/locale/nl-NL.json
@@ -1,42 +1,50 @@
 {
-    "Only one file is allowed to be uploaded": "Only one file is allowed to be uploaded",
-    "File size cannot exceed 10M": "File size cannot exceed 10M",
-    "Please upload the file of Excel": "Please upload the file of Excel",
-    "Import Data": "Import Data",
-    "Start import": "Start import",
-    "Import explain": "Guide",
-    "Download template": "Download template",
-    "Step 1: Download template": "Step 1: Download template",
-    "Step 2: Upload Excel": "Step 2: Upload Excel",
-    "Step 3: Import options": "Step 3: Import options",
-    "Download tips": "- Download the template and fill in the data according to the format \r\n - Import only the first worksheet \r\n - Do not change the header of the template to prevent import failure",
-    "Import warnings": "You can import up to {{limit}} rows of data at a time, any excess will be ignored.",
-    "Upload placeholder": "Drag and drop the file here or click to upload, file size should not exceed 80M",
-    "Excel data importing": "Excel data importing",
-    "{{successCount}} records have been successfully imported": "{{successCount}} records have been successfully imported",
-    "To download the failure data": "To download the failure data",
-    "Add importable field": "Add importable field",
+    "Only one file is allowed to be uploaded": "Er kan slechts één bestand worden geüpload",
+    "File size cannot exceed 10M": "Bestandsgrootte mag niet groter zijn dan 10M",
+    "Please upload the file of Excel": "Upload het Excel-bestand",
+    "Import Data": "Importeer gegevens",
+    "Start import": "Start importeren",
+    "Import explain": "Uitleg",
+    "Download template": "Download sjabloon",
+    "Step 1: Download template": "Stap 1: Download sjabloon",
+    "Step 2: Upload Excel": "Stap 2: Upload Excel",
+    "Step 3: Import options": "Stap 3: Importeer opties",
+    "Download tips": "- Download het sjabloon en vul de gegevens in volgens het formaat\r\n - Importeer alleen het eerste werkblad\r\n - Wijzig de sjabloontitel niet om importfouten te voorkomen",
+    "Import warnings": "Maximaal {{limit}} rijen gegevens kunnen tegelijk worden geïmporteerd, eventuele overschrijdingen worden genegeerd.",
+    "Upload placeholder": "Sleep het bestand hierheen of klik om te uploaden, bestandsgrootte niet groter dan 80M",
+    "Excel data importing": "Gegevens importeren, sluit het venster niet",
+    "{{successCount}} records have been successfully imported": "{{successCount}} records zijn succesvol geïmporteerd",
+    "To download the failure data": "Download de gegevens die niet konden worden geïmporteerd",
+    "Add importable field": "Voeg een importeerbaar veld toe",
     "Done": "Klaar",
     "Yes": "Ja",
     "No": "Nee",
-    "Field {{fieldName}} does not exist": "Field {{fieldName}} does not exist",
-    "can not find value": "can not find value",
-    "password is empty": "password is empty",
-    "Incorrect time format": "Incorrect time format",
-    "Incorrect date format": "Incorrect date format",
-    "Incorrect email format": "Incorrect email format",
-    "Illegal percentage format": "Illegal percentage format",
-    "Imported template does not match, please download again.": "Imported template does not match, please download again.",
-    "another import action is running, please try again later.": "another import action is running, please try again later.",
-    "Please select": "Please select",
+    "Field {{fieldName}} does not exist": "Veld {{fieldName}} bestaat niet",
+    "can not find value": "Kan de waarde niet vinden",
+    "password is empty": "Wachtwoord is leeg",
+    "Incorrect time format": "Onjuist tijdsformaat",
+    "Incorrect date format": "Onjuist datumformaat",
+    "Incorrect email format": "Onjuist e-mailformaat",
+    "Illegal percentage format": "Ongeldig percentageformaat",
+    "Imported template does not match, please download again.": "Het geïmporteerde sjabloon komt niet overeen, download het opnieuw.",
+    "another import action is running, please try again later.": "Er is al een andere importactie bezig, probeer het later opnieuw.",
+    "Please select": "Selecteer",
     "Custom column title": "Aangepaste kolomtitel",
-    "Field description": "Field description",
-    "Field description placeholder": "Enter field description",
-    "Columns configuration is empty": "Columns configuration is empty",
-    "Field not found: {{field}}": "Field not found: {{field}}",
-    "Headers not found. Expected headers: {{headers}}": "Headers not found. Expected headers: {{headers}}",
-    "Header mismatch at column {{column}}: expected \"{{expected}}\", but got \"{{actual}}\"": "Header mismatch at column {{column}}: expected \"{{expected}}\", but got \"{{actual}}\"",
-    "No data to import": "No data to import",
-    "Failed to import row {{row}}, {{message}}, row data: {{data}}": "Failed to import row {{row}}, {{message}}, row data: {{data}}",
-    "import-error": "Failed to import row {{rowIndex}}, row data: {{rowData}}, cause: {{causeMessage}}"
+    "Field description": "Veldbeschrijving",
+    "Field description placeholder": "Voer de veldbeschrijving in",
+    "Columns configuration is empty": "Kolomconfiguratie is leeg",
+    "Field not found: {{field}}": "Veld niet gevonden: {{field}}",
+    "Headers not found. Expected headers: {{headers}}": "Kopteksten niet gevonden. Verwachte kopteksten: {{headers}}",
+    "Header mismatch at column {{column}}: expected \"{{expected}}\", but got \"{{actual}}\"": "Koptekst komt niet overeen in kolom {{column}}: verwachtte \"{{expected}}\", maar kreeg \"{{actual}}\"",
+    "No data to import": "Geen gegevens om te importeren",
+    "Failed to import row {{row}}, {{message}}, row data: {{data}}": "Fout bij importeren van rij {{row}}, {{message}}, rijgegevens: {{data}}",
+    "import-error": "Fout bij importeren van rij {{rowIndex}}, rijgegevens: {{rowData}}, reden: {{causeMessage}}",
+    "Import completed": "Importeren voltooid: {{success}} records zijn geïmporteerd, {{updated}} records zijn bijgewerkt, {{skipped}} records zijn overgeslagen, totaal {{total}} records",
+    "Successfully imported": "Succesvol geïmporteerd",
+    "Updated records": "Bijgewerkte records",
+    "Skipped records": "Overgeslagen records",
+    "Total records": "Totaal aantal records",
+    "View result": "Bekijk resultaat",
+    "ImportResult": "{{success}} records zijn geïmporteerd, {{updated}} records zijn bijgewerkt, {{skipped}} records zijn overgeslagen, totaal {{total}} records",
+    "Task result": "Taakresultaat"
 }
