--- a/packages/plugins/@nocobase/plugin-map/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-map/src/locale/nl-NL.json
@@ -1,35 +1,35 @@
 {
-    "Map": "Map",
-    "Map-based geometry": "Map-based geometry",
-    "Map type": "Map type",
-    "Point": "Point",
-    "Line": "Line",
-    "Circle": "Circle",
-    "Polygon": "Polygon",
-    "Access key": "Access key",
-    "securityJsCode or serviceHost": "securityJsCode or serviceHost",
+    "Map": "Kaart",
+    "Map-based geometry": "Kaartgebaseerde geometrie",
+    "Map type": "Kaarttype",
+    "Point": "Punt",
+    "Line": "Lijn",
+    "Circle": "Cirkel",
+    "Polygon": "Veelhoek",
+    "Access key": "Toegangssleutel",
+    "securityJsCode or serviceHost": "securityJsCode of serviceHost",
     "AMap": "AMap",
     "Google Maps": "Google Maps",
     "Clear": "Wissen",
-    "Click to select the starting point and double-click to end the drawing": "Click to select the starting point and double-click to end the drawing",
-    "Clear the canvas": "Clear the canvas",
-    "Are you sure to clear the canvas?": "Are you sure to clear the canvas?",
-    "Confirm": "Confirm",
+    "Click to select the starting point and double-click to end the drawing": "Klik om het startpunt te selecteren en dubbelklik om het tekenen te beëindigen",
+    "Clear the canvas": "Wis het canvas",
+    "Are you sure to clear the canvas?": "Weet je zeker dat je het canvas wilt wissen?",
+    "Confirm": "Bevestigen",
     "Cancel": "Annuleren",
-    "Enter keywords to search": "Enter keywords to search",
-    "The AccessKey is incorrect, please check it": "The AccessKey is incorrect, please check it",
-    "Please configure the AMap securityCode or serviceHost correctly": "Please configure the AMap securityCode or serviceHost correctly",
-    "Map Manager": "Map Manager",
-    "Configuration": "Configuration",
+    "Enter keywords to search": "Voer zoekwoorden in om te zoeken",
+    "The AccessKey is incorrect, please check it": "De AccessKey is onjuist, controleer het",
+    "Please configure the AMap securityCode or serviceHost correctly": "Configureer de AMap securityCode of serviceHost correct",
+    "Map Manager": "Kaartbeheerder",
+    "Configuration": "Configuratie",
     "Saved successfully": "Succesvol opgeslagen",
-    "Saved failed": "Saved failed",
+    "Saved failed": "Opslaan mislukt",
     "Edit": "Bewerken",
     "Save": "Opslaan",
-    "Please configure the AccessKey and SecurityJsCode first": "Please configure the AccessKey and SecurityJsCode first",
-    "Go to the configuration page": "Go to the configuration page",
+    "Please configure the AccessKey and SecurityJsCode first": "Configureer eerst de AccessKey en SecurityJsCode",
+    "Go to the configuration page": "Ga naar de configuratiepagina",
     "Zoom": "Zoom",
-    "Set default zoom level": "Set default zoom level",
-    "The default zoom level of the map": "The default zoom level of the map",
+    "Set default zoom level": "Stel het standaard zoomniveau in",
+    "The default zoom level of the map": "Het standaard zoomniveau van de kaart",
     "Edit field title": "Veldtitel bewerken",
     "Field title": "Veldtitel",
     "Edit tooltip": "Tooltip bewerken",
@@ -41,11 +41,14 @@
     "Readonly": "Alleen-lezen",
     "Easy-reading": "Gemakkelijk te lezen",
     "Edit description": "Bewerk beschrijving",
-    "Map field": "Map field",
-    "Marker field": "Marker field",
-    "Load google maps failed, Please check the Api key and refresh the page": "Load google maps failed, Please check the Api key and refresh the page",
-    "Create map block": "Create map block",
-    "Start point": "Start point",
-    "End point": "End point",
-    "Concatenation order field": "Concatenation order field"
+    "Map field": "Kaartveld",
+    "Marker field": "Markerveld",
+    "Load google maps failed, Please check the Api key and refresh the page": "Google Maps laden mislukt, controleer de Api-sleutel en vernieuw de pagina",
+    "Create map block": "Kaartblok maken",
+    "Start point": "Startpunt",
+    "End point": "Eindpunt",
+    "Concatenation order field": "Concatenatievolgordeveld",
+    "securityJsCode or serviceHost is required": "securityJsCode of serviceHost is verplicht",
+    "Access key is required": "Toegangssleutel is verplicht",
+    "Api key is required": "Api-sleutel is verplicht"
 }
