--- a/packages/plugins/@nocobase/plugin-mobile/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-mobile/src/locale/nl-NL.json
@@ -1,29 +1,35 @@
 {
-    "App settings": "App settings",
-    "Page settings": "Page settings",
+    "App settings": "App instellingen",
+    "Page settings": "Pagina instellingen",
     "Info": "Info",
-    "Back": "Back",
+    "Back": "Terug",
     "Link": "Link",
-    "Remove": "Remove",
+    "Remove": "Verwijderen",
     "Add page": "Pagina toevoegen",
     "Title": "Titel",
     "Icon": "Icoon",
-    "Selected icon": "Selected icon",
+    "Selected icon": "Geselecteerd icoon",
     "Add link": "Link toevoegen",
-    "Display tab bar": "Display tab bar",
-    "Display page header": "Display page header",
-    "Display navigation bar": "Display navigation bar",
-    "Display page title": "Display page title",
-    "Display tabs": "Display tabs",
+    "Display tab bar": "Tabbladbalk weergeven",
+    "Display page header": "Paginakoptekst weergeven",
+    "Display navigation bar": "Navigatiebalk weergeven",
+    "Display page title": "Paginatitel weergeven",
+    "Display tabs": "Tabbladen weergeven",
     "Add tab": "Voeg tabblad toe",
-    "Mobile": "Mobile",
-    "Title field is required": "Title field is required",
-    "Icon field is required": "Icon field is required",
-    "Desktop data blocks": "Desktop data blocks",
-    "Other desktop blocks": "Other desktop blocks",
+    "Mobile": "Mobiel",
+    "Title field is required": "Titelveld is verplicht",
+    "Icon field is required": "Icoonveld is verplicht",
+    "Desktop data blocks": "Desktop data blokken",
+    "Other desktop blocks": "Andere desktop blokken",
     "Settings": "Instellingen",
-    "Mobile menu": "Mobile menu",
-    "No accessible pages found": "No accessible pages found",
-    "This might be due to permission configuration issues": "This might be due to permission configuration issues",
-    "Select time": "Select time"
+    "Mobile menu": "Mobiel menu",
+    "No accessible pages found": "Geen toegankelijke pagina's gevonden",
+    "This might be due to permission configuration issues": "Dit kan te wijten zijn aan machtigingsconfiguratieproblemen",
+    "Select time": "Selecteer tijd",
+    "Fill": "Vullen",
+    "Mobile routes": "Mobiele routes",
+    "Clear": "Wissen",
+    "Confirm": "Bevestigen",
+    "Cancel": "Annuleren",
+    "Display < back button": "Weergave < terug knop"
 }
