--- a/packages/plugins/@nocobase/plugin-notification-manager/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-notification-manager/src/locale/nl-NL.json
@@ -28,6 +28,8 @@
     "Select users": "Geselecteerde gebruikers",
     "Query users": "Gebruikers zoeken",
     "Receiver type": "Ontvanger type",
+    "Manual input": "Handmatige invoer",
+    "Select user": "Gebruiker selecteren",
     "No channel enabled yet": "Nog geen kanaal ingeschakeld",
     "Success": "Succesvol",
     "Fail": "Mislukt",
