--- a/packages/plugins/@nocobase/plugin-theme-editor/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-theme-editor/src/locale/nl-NL.json
@@ -1,7 +1,20 @@
 {
+    "Themes": "Thema's",
     "Theme": "Thema",
     "Local": "Lokaal",
     "Dark theme": "Donker thema",
+    "Delete theme": "Verwijder thema",
+    "Deletion is unrecoverable. Confirm deletion?": "Verwijdering is onherstelbaar. Bevestig verwijdering?",
+    "Deleted successfully": "Succesvol verwijderd",
+    "Updated successfully": "Succesvol bijgewerkt",
+    "User selectable": "Gebruiker selecteerbaar",
+    "Default theme": "Standaard thema",
+    "Add new theme": "Voeg nieuw thema toe",
+    "Edit based on current theme": "Bewerk op basis van huidig thema",
+    "Create a brand new theme": "Nieuw thema aanmaken",
+    "Dark": "Donker",
+    "Compact": "Compact",
+    "Compact dark": "Compact donker",
     "Optional": "Optioneel",
     "Non-optional": "Niet-optioneel",
     "Current": "Huidige",
