--- a/packages/plugins/@nocobase/plugin-user-data-sync/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-user-data-sync/src/locale/nl-NL.json
@@ -13,6 +13,7 @@
     "Success": "Succes",
     "Failed": "Mislukt",
     "Authenticator": "Authenticator",
+    "default": "Standaard",
     "Retry": "Opnieuw proberen",
     "No user data source plugin installed": "Geen gebruikersgegevensbron-plugin geïnstalleerd",
     "View documentation": "Bekijk documentatie",
