--- a/packages/plugins/@nocobase/plugin-error-handler/src/locale/nl-NL.json
+++ b/packages/plugins/@nocobase/plugin-error-handler/src/locale/nl-NL.json
@@ -1,6 +1,5 @@
 {
     "unique violation": "{{field}} bestaat al",
     "notNull violation": "{{field}} mag niet leeg zijn",
-    "Validation error": "{{field}} validatiefout",
-    "notNull Violation": "{{field}} mag niet leeg zijn"
+    "Validation error": "{{field}} validatiefout"
 }
