feat:  support hiding colons in form field labels

--- a/packages/core/client/src/locale/zh-CN.json
+++ b/packages/core/client/src/locale/zh-CN.json
@@ -1095,5 +1095,6 @@
   "Font Weight": "字体粗细",
   "Font Style": "字体样式",
   "Italic": "斜体",
-  "Response record":"响应结果记录"
+  "Response record":"响应结果记录",
+  "Colon":"冒号"
 }
