--- a/packages/core/client/src/locale/en-US.json
+++ b/packages/core/client/src/locale/en-US.json
@@ -888,5 +888,7 @@
   "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.",
   "Deprecated": "Deprecated",
   "The following old template features have been deprecated and will be removed in next version.": "The following old template features have been deprecated and will be removed in next version.",
-  "Full permissions": "Full permissions"
+  "Full permissions": "Full permissions",
+  "Refresh data blocks": "Refresh data blocks",
+  "Select data blocks to refresh": "Select data blocks to refresh"
 }
