--- a/packages/core/client/src/locale/es-ES.json
+++ b/packages/core/client/src/locale/es-ES.json
@@ -805,5 +805,7 @@
   "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "Después de ocultar, esta pestaña ya no aparecerá en la barra de pestañas. Para mostrarla de nuevo, deberás ir a la página de gestión de rutas para configurarla.",
   "Deprecated": "Obsoleto",
   "The following old template features have been deprecated and will be removed in next version.": "Las siguientes características de plantilla antigua han quedado obsoletas y se eliminarán en la próxima versión.",
-  "Full permissions": "Todos los derechos"
+  "Full permissions": "Todos los derechos",
+  "Refresh data blocks": "Actualizar bloques de datos",
+  "Select data blocks to refresh": "Actualizar bloques de datos"
 }
