feat: add tootip

--- a/packages/core/client/src/locale/en-US.json
+++ b/packages/core/client/src/locale/en-US.json
@@ -890,5 +890,7 @@
   "The following old template features have been deprecated and will be removed in next version.": "The following old template features have been deprecated and will be removed in next version.",
   "Full permissions": "Full permissions",
   "Refresh data blocks": "Refresh data blocks",
-  "Select data blocks to refresh": "Select data blocks to refresh"
+  "Select data blocks to refresh": "Select data blocks to refresh",
+  "After successful submission, the selected data blocks will be automatically refreshed.": "After successful submission, the selected data blocks will be automatically refreshed."
+
 }
