--- a/packages/core/client/src/locale/it-IT.json
+++ b/packages/core/client/src/locale/it-IT.json
@@ -1082,5 +1082,6 @@
   "Are you sure you want to hide this tab?": "Sei sicuro di voler nascondere questa scheda?",
   "After hiding, this tab will no longer appear in the tab bar. To show it again, you need to go to the route management page to set it.": "Dopo averla nascosta, questa scheda non apparirà più nella barra delle schede. Per mostrarla di nuovo, devi andare alla pagina di gestione dei percorsi per configurarlo.",
   "Refresh data blocks": "Aggiorna blocchi di dati",
-  "Select data blocks to refresh": "Aggiorna blocchi di dati"
+  "Select data blocks to refresh": "Aggiorna blocchi di dati",
+  "After successful submission, the selected data blocks will be automatically refreshed.": "Dopo una soumission réussie, les blocs de données sélectionnés seront automatiquement actualisés."
 }
