--- a/packages/core/client/src/locale/ko-KR.json
+++ b/packages/core/client/src/locale/ko-KR.json
@@ -918,5 +918,6 @@
   "The following old template features have been deprecated and will be removed in next version.": "다음 오래된 템플릿 기능은 사용 중단되었으며 다음 버전에서 제거될 것입니다.",
   "Full permissions": "모든 권한",
   "Refresh data blocks": "데이터 블록 새로 고침",
-  "Select data blocks to refresh": "데이터 블록을 선택하여 새로 고침"
+  "Select data blocks to refresh": "데이터 블록을 선택하여 새로 고침",
+  "After successful submission, the selected data blocks will be automatically refreshed.": "전송 후, 선택한 데이터 블록이 자동으로 새로 고쳐집니다."
 }
