--- a/packages/core/client/src/locale/es-ES.json
+++ b/packages/core/client/src/locale/es-ES.json
@@ -807,5 +807,6 @@
   "The following old template features have been deprecated and will be removed in next version.": "Las siguientes características de plantilla antigua han quedado obsoletas y se eliminarán en la próxima versión.",
   "Full permissions": "Todos los derechos",
   "Refresh data blocks": "Actualizar bloques de datos",
-  "Select data blocks to refresh": "Actualizar bloques de datos"
+  "Select data blocks to refresh": "Actualizar bloques de datos",
+  "After successful submission, the selected data blocks will be automatically refreshed.": "Después de enviar correctamente, los bloques de datos seleccionados se actualizarán automáticamente."
 }
