--- a/packages/core/client/src/locale/fr-FR.json
+++ b/packages/core/client/src/locale/fr-FR.json
@@ -827,5 +827,6 @@
   "The following old template features have been deprecated and will be removed in next version.": "Les fonctionnalités des anciens modèles ont été dépréciées et seront supprimées dans la prochaine version.",
   "Full permissions": "Tous les droits",
   "Refresh data blocks": "Actualiser les blocs de données",
-  "Select data blocks to refresh": "Actualiser les blocs de données"
+  "Select data blocks to refresh": "Actualiser les blocs de données",
+  "After successful submission, the selected data blocks will be automatically refreshed.": "Après une soumission réussie, les blocs de données sélectionnés seront automatiquement actualisés."
 }
