--- a/packages/core/client/src/locale/nl-NL.json
+++ b/packages/core/client/src/locale/nl-NL.json
@@ -1056,5 +1056,6 @@
     "Font Style": "Letterstijl",
     "Italic": "Cursief",
     "Refresh data blocks": "Vernieuw gegevensblokken",
-    "Select data blocks to refresh": "Selecteer gegevensblokken om te vernieuwen"
+    "Select data blocks to refresh": "Selecteer gegevensblokken om te vernieuwen",
+    "After successful submission, the selected data blocks will be automatically refreshed.": "Na succesvolle indiening worden de geselecteerde gegevensblokken automatisch vernieuwd."
 }
